fix x overflow

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -58,6 +58,7 @@
 html {
   font-size: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 // @media (min-width: 1920px) {
